Remove debug log prefixes and refactor `Content-Type` handling